<resources>
    <string name="app_name">Currency-Exchange-Rates-Assignment2</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="convert_from">Amount To Convert</string>
    <string name="convert_to">Conversion Rate</string>
    <string name="select_country">Select Country</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome Back!</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="design">UI design items</string>
    <string name="forget_password">Forgot your Password?</string>

    <string name="login_new_user">Are you a new user? Register!</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <string-array name="currencies">
        <item>EUR</item>

        <item>GBP</item>
        <item>USD</item>
        <item>DKK</item>
<item>ILS</item>
        <item>SEK</item>
        <item>AUD</item>
        <item>CAD</item>
        <item>JPY</item>

    </string-array>

    <string-array name="currencies2">
        <item>USD</item>

        <item>DKK</item>
        <item>EUR</item>
        <item>GBP</item>
<item>ILS</item>
        <item>SEK</item>
        <item>AUD</item>
        <item>CAD</item>
        <item>JPY</item>

    </string-array>


</resources>