<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/top_background"
        android:contentDescription="@string/design"/>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="100dp"
                android:text="@string/welcome"
                android:textColor="@color/purple"
                android:textSize="40sp"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/edittext_background"
                android:drawableStart="@drawable/email"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textColor="@color/purple"
                android:textColorHint="@color/purple"
                android:autofillHints="" />

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/edittext_background"
                android:drawableStart="@drawable/password"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/purple"
                android:textColorHint="@color/purple"
                android:autofillHints="" />


            <CheckBox
                android:id="@+id/chk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:gravity="center_horizontal"

                android:text="Remember me"
                android:textColor="@color/purple"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="16dp"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/btn_login"
                android:contentDescription="@string/action_sign_in"
                android:onClick="enterButton"/>





        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>